--- a/quartus/labs/Lab2/DE10_Top_Level.qsf
+++ b/quartus/labs/Lab2/DE10_Top_Level.qsf
@@ -1037,6 +1037,7 @@ set_instance_assignment -name GLOBAL_SIGNAL OFF -to u0|hps_0|hps_io|border|hps_s
 set_instance_assignment -name GLOBAL_SIGNAL OFF -to u0|hps_0|hps_io|border|hps_sdram_inst|p0|umemphy|uread_datapath|reset_n_fifo_wraddress[3] -tag __hps_sdram_p0
 set_instance_assignment -name ENABLE_BENEFICIAL_SKEW_OPTIMIZATION_FOR_NON_GLOBAL_CLOCKS ON -to u0|hps_0|hps_io|border|hps_sdram_inst -tag __hps_sdram_p0
 set_instance_assignment -name PLL_COMPENSATION_MODE DIRECT -to u0|hps_0|hps_io|border|hps_sdram_inst|pll0|fbout -tag __hps_sdram_p0
+set_global_assignment -name VHDL_FILE ../../../hdl/pwm/pwm_controller.vhd
 set_global_assignment -name QIP_FILE soc_system/synthesis/soc_system.qip
 set_global_assignment -name VHDL_FILE ../../../hdl/avalon/led_patterns_avalon.vhd
 set_global_assignment -name VHDL_FILE "../../../hdl/async-conditioner/led_pattern.vhd"
@@ -1047,5 +1048,5 @@ set_global_assignment -name VHDL_FILE ../../../hdl/synchronizer/synchronizer.vhd
 set_global_assignment -name VHDL_FILE DE10_Top_Level.vhd
 set_global_assignment -name SDC_FILE de10nano.sdc
 set_global_assignment -name SIGNALTAP_FILE stp1.stp
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name SLD_FILE db/stp1_auto_stripped.stp
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
