--- a/quartus/labs/Lab2/DE10_Top_Level.qsf
+++ b/quartus/labs/Lab2/DE10_Top_Level.qsf
@@ -1037,8 +1037,9 @@ set_instance_assignment -name GLOBAL_SIGNAL OFF -to u0|hps_0|hps_io|border|hps_s
 set_instance_assignment -name GLOBAL_SIGNAL OFF -to u0|hps_0|hps_io|border|hps_sdram_inst|p0|umemphy|uread_datapath|reset_n_fifo_wraddress[3] -tag __hps_sdram_p0
 set_instance_assignment -name ENABLE_BENEFICIAL_SKEW_OPTIMIZATION_FOR_NON_GLOBAL_CLOCKS ON -to u0|hps_0|hps_io|border|hps_sdram_inst -tag __hps_sdram_p0
 set_instance_assignment -name PLL_COMPENSATION_MODE DIRECT -to u0|hps_0|hps_io|border|hps_sdram_inst|pll0|fbout -tag __hps_sdram_p0
-set_global_assignment -name VHDL_FILE ../../../hdl/pwm/pwm_controller.vhd
 set_global_assignment -name QIP_FILE soc_system/synthesis/soc_system.qip
+set_global_assignment -name VHDL_FILE ../../../hdl/avalon/rgb_led_avalon.vhd
+set_global_assignment -name VHDL_FILE ../../../hdl/pwm/pwm_controller.vhd
 set_global_assignment -name VHDL_FILE ../../../hdl/avalon/led_patterns_avalon.vhd
 set_global_assignment -name VHDL_FILE "../../../hdl/async-conditioner/led_pattern.vhd"
 set_global_assignment -name VHDL_FILE "../../../hdl/async-conditioner/one_pulse.vhd"
