commit for lab 11, messed up the branches

--- a/linux/dts/socfpga_cyclone5_de10nano_led_patterns.dts
+++ b/linux/dts/socfpga_cyclone5_de10nano_led_patterns.dts
@@ -1,4 +1,7 @@
 #include "socfpga_cyclone5_de10nano.dtsi"
 /{
-    
+ led_patterns: led_patterns@ff200020 {
+ compatible = "adsd,led_patterns";
+ reg = <0xff200020 16>;
+ };
 };
